--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "through2": "^0.6.1",
-    "handlebars": "^1.3.0",
+    "handlebars": "~2.0.0-alpha.4",
     "gulp-util": "^3.0.0"
   },
   "devDependencies": {
